--- a/styles/style.css
+++ b/styles/style.css
@@ -210,6 +210,7 @@
 .button-save {
   display: block;
   inline-size: var(--save-button-inline-size);
+  min-inline-size: 306px;
   padding: 15px 17px;
   margin-block: 50px 100px;
   margin-inline: auto;
